...
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:layout_margin="0dp"
                android:id="@+id/edit_ingredient_button"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/delete_ingredient_button"
                android:layout_margin="20dp"/>


        </LinearLayout>

    </LinearLayout>
...
